--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A full stack social media app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,11 @@
   "bugs": {
     "url": "https://github.com/kumasumit/FriendBook-Full-Stack-App/issues"
   },
-  "homepage": "https://github.com/kumasumit/FriendBook-Full-Stack-App#readme"
+  "homepage": "https://github.com/kumasumit/FriendBook-Full-Stack-App#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
