--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/kumasumit/FriendBook-Full-Stack-App#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
