--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
     "node-sass-middleware": "^1.0.1",
+    "nodemailer": "^6.8.0",
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "toastr": "^2.1.4"
+    "passport-google-oauth": "^2.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
